# ToBoldlyRespawn-Public

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: playtest_feedback.yml
.github/workflows/: public_ci.yml  public_release.yml
data/: asset_manifest.json  default_profile.json  equipment.json  events.json  flavor.json  maps.json  player_ships.json  quests.json  rewards.json  ships.json  story.json  waves.json  weapons.json
src/space_demo/: __init__.py  app.py  app_base.py  config.py  main.py  progression_log_runtime.py  startup_branding.py  story_popup_runtime.py
src/space_demo/calibration/: chase_pressure_tuning_proposal.py
src/space_demo/core/: events.py  generated_assets.py  ids.py  math2d.py  procedural_audio.py  procedural_gui.py  settings_store.py  state.py  waves.py
src/space_demo/data/: loader.py  validation.py
src/space_demo/domain/: __init__.py  content_ids.py  equipment.py  events.py  maps.py  profile.py  quests.py  rewards.py  ships.py  story.py  waves.py
src/space_demo/gameplay/: combat.py  enemies.py  pickups.py  player.py  pressure_director.py  projectiles.py
src/space_demo/input/: controls.py
src/space_demo/presentation/: actor_orientation.py  assets.py  audio.py  enemy_trails.py  primitives.py  vfx.py  view_sync.py
src/space_demo/profile/: __init__.py  equipment_runtime.py  events_runtime.py  migration.py  reward_grants.py  runtime.py  store.py
src/space_demo/telemetry/: __init__.py  playtest_session.py
src/space_demo/ui/: __init__.py  autofit.py  components.py  controls.py  hud.py  (+9 more)
(+17 files in other folders)
